--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="default-testCases.js"></script>
   <!--script src="testSuit.js"></script -->
   <script src="core/testTheRest.js"></script>
-  <script src="dashboard.js"></script>
+  <script src="dashboardV2.js"></script>
 
   <script  src="core/navi.js"></script>
 
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="blog-header">
         <h1 class="blog-title">Test the Rest</h1>
