Recorder and major perf fixes

--- a/index3.html
+++ b/index3.html
@@ -46,13 +46,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Test The Rest</a>
+          <a class="navbar-brand" href="./index3.html">Test The Rest</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="./index3.html">Home</a></li>
+            <li><a href="./GettingStarted.html">Getting Started</a></li>
+            <li><a href="./about.html">About</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -110,11 +110,14 @@
                 </div>
               </div>
             </div>
-            <div class="panel-body">
+            <div class="panel-body consoleViewContainer">
 
 
                 <div id="progress" class="progress"></div>
-                <div id="consoleView"></div>
+                <div class="consoleView" id="">
+                  <div id="consoleView"></div>
+                <div id="consoleViewBottom"></div>
+                </div>
 
 
             </div>
