--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <script data-semver="2.1.1" src="ext-lib/jquery.min.js"></script>
-  <script  data-semver="3.1.1" src="ext-lib/bootstrap.min.js"></script>
+  <script  data-semver="3.1.1" src="ext-lib/bootstrap.js"></script>
   <link  data-semver="3.2.0" rel="stylesheet" href="style/bootstrap.min.css" />
 
   <link href="style/offcanvas.css" rel="stylesheet">
@@ -51,7 +51,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="./index3.html">Home</a></li>
-            <li><a href="./GettingStarted.html">Getting Started</a></li>
+            <li><a href="./settings.html">settings</a></li>
             <li><a href="./about.html">About</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
@@ -131,7 +131,7 @@
 
       <footer>
         <p>&copy; <a href="#">testTheRest</a> 2015 by <a href="#">@Vishal Joshi</a>. Version 0.2(Beta)</p>
-
+  
       </footer>
 
     </div><!--/.container-->
