--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li ><a href="./index3.html">Home</a></li>
-            <li ><a href="./GettingStarted.html">Getting Started</a></li>
+            <li ><a href="./settings.html">settings</a></li>
             <li class="active"><a href="./about.html">About</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
@@ -70,7 +70,7 @@
 
           </div>
           <div class="row">
-          <h3>Improvments currently in works</h3>
+          <h3>Improvements currently in works</h3>
 
           </div>
 
