--- a/settings.html
+++ b/settings.html
@@ -10,19 +10,14 @@
   <script data-semver="2.1.1" src="ext-lib/jquery.min.js"></script>
   <script  data-semver="3.1.1" src="ext-lib/bootstrap.min.js"></script>
   <link  data-semver="3.2.0" rel="stylesheet" href="style/bootstrap.min.css" />
-
   <link href="style/offcanvas.css" rel="stylesheet">
   <!--link rel="stylesheet" href="styleV2.css" / -->
   <link rel="stylesheet" href="style/dashboard.css" />
   <link rel="stylesheet" href="style/tree.css" />
-<script src="core/eventBus.js" ></script>
 
-  <script src="default-testCases.js"></script>
-
-  <script src="core/testTheRest.js"></script>
-  <script src="dashboardV3.js"></script>
-
-  <script  src="core/navi.js"></script>
+  <link href="style/settings.css" rel="stylesheet">
+  <!--link rel="stylesheet" href="styleV2.css" / -->
+  <script  src="settings.js"></script>
 
 
 
@@ -32,10 +27,7 @@
 
 </head>
 
-
-
-
-  <body>
+  <body >
 
     <nav class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
@@ -51,8 +43,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li ><a href="./index3.html">Home</a></li>
-            <li class="active"><a href="./GettingStarted.html">Getting Started</a></li>
-            <li ><a href="./about.html">About</a></li>
+            <li class="active"><a href="./settings.html">settings</a></li>
+            <li><a href="./about.html">About</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -60,31 +52,49 @@
 
     <div class="container-flexi">
       <div class="row main-section">
+        <h3> recorder  Settings</h3>
+        <div class="col-xs-12 ">
+          <div class="row ">
 
-        <div class="col-xs-12 col-sm-7">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-          </p>
-          <div class="row">
-          <h3>what this is about?</h3>
 
-          </div>
-          <div class="row">
-          <h3>Improvments currently in works</h3>
+              <h5>call Types</h5>
+              <!--['main_frame', 'sub_frame','xmlhttprequest']-->
+              <label>Main Frame</label><input type="checkbox" id="main_frame" >
+              <label>Sub Frame</label><input type="checkbox" id="sub_frame"  >
+              <label>Ajax</label><input type="checkbox" id="xmlhttprequest" >
 
-          </div>
+
+
+
+
+          </div><!--/row-->
+          <div class="row ">
+
+
+              <h5>Excluded urls</h5>
+              <input type="text" id="urlExclusion">
+              <input class="btn btn-success "type="button" id="addUrlExclusion" value="Add">
+              <div id ="UrlexclusionDisplay" class="exclusion">
+              </div>
+
+
+          </div><!--/row-->
 
 
         </div><!--/.col-xs-12.col-sm-9-->
+        <div class="row ">
+          <div class="col-xs-4">
+          </div>
+          <div class="col-xs-8">
+            <input class="btn btn-success "type="button" id="saveSettings" value="Save">
+          </div>
 
-        <div class="col-xs-6 col-sm-5 sidebar-offcanvas" id="sidebar">
 
+        </div>
 
-
-        </div><!--/.sidebar-offcanvas-->
       </div><!--/row-->
 
-      <hr>
+
 
       <footer>
         <p>&copy; <a href="#">testTheRest</a> 2015 by <a href="#">@Vishal Joshi</a>. Version 0.2(Beta)</p>
