--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -20,7 +20,7 @@
   <script src="default-testCases.js"></script>
 
   <script src="core/testTheRest.js"></script>
-  <script src="dashboardV3.js"></script>
+  <script src="dashboard.js"></script>
 
   <script  src="core/navi.js"></script>
 
@@ -46,11 +46,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index3.html">Test The Rest</a>
+          <a class="navbar-brand" href="./index.html">Test The Rest</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="./index3.html">Home</a></li>
+            <li ><a href="./index.html">Home</a></li>
             <li class="active"><a href="./GettingStarted.html">Getting Started</a></li>
             <li ><a href="./about.html">About</a></li>
           </ul>
