--- a/popup.html
+++ b/popup.html
@@ -82,11 +82,10 @@ color: red!important;
   <div class="panel-body">
     <div class="list-group">
   <a  id="startRecord"  class="list-group-item ">Record</a>
-  <a href="#" id="save"  class="list-group-item ">Save</a>
   <a href="#" id="loadTestTheRest" class="list-group-item">Test The Rest</a>
-  <a href="#" class="list-group-item">getting started</a>
-  <a href="#" class="list-group-item">about</a>
-  <a href="#" class="list-group-item">help & feedback</a>
+  <a href="#" id="recordSettings" class="list-group-item">Settings</a>
+  <a href="#" id="faq" class="list-group-item">Faq</a>
+  <a href="https://github.com/vishaljoshi/TestTheRest/issues"  target="_blank"class="list-group-item">Feedback & Issues</a>
 </div>
   </div>
 </div>
