--- a/settings.html
+++ b/settings.html
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index3.html">Test The Rest</a>
+          <a class="navbar-brand" href="./index.html">Test The Rest</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="./index3.html">Home</a></li>
+            <li ><a href="./index.html">Home</a></li>
             <li class="active"><a href="./settings.html">settings</a></li>
-            <li><a href="./about.html">About</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -97,7 +97,7 @@
 
 
       <footer>
-        <p>&copy; <a href="#">testTheRest</a> 2015 by <a href="#">@Vishal Joshi</a>. Version 0.2(Beta)</p>
+        <p>&copy; <a href="#">testTheRest</a> 2015 by <a href="#">@Vishal Joshi</a>. Version 0.21.4(Beta)</p>
 
       </footer>
 
