--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="default-testCases.js"></script>
 
   <script src="core/testTheRest.js"></script>
-  <script src="dashboardV3.js"></script>
+  <script src="dashboard.js"></script>
 
   <script  src="core/navi.js"></script>
 
@@ -46,13 +46,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="./index3.html">Test The Rest</a>
+          <a class="navbar-brand" href="./index.html">Test The Rest</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index3.html">Home</a></li>
+            <li class="active"><a href="./index.html">Home</a></li>
             <li><a href="./settings.html">settings</a></li>
-            <li><a href="./about.html">About</a></li>
+            <li><a href="./faq.html">FAQ</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -73,7 +73,7 @@
                 </div>
 
                   <a class="btn btn-primary glyphicon glyphicon-upload"  id="exportTestCase"> Download</a>
-
+                  <div class="header"><span>Test in Peace</span></div>
           </div>
           <div class="row">
             <div class="tree well">
@@ -130,8 +130,8 @@
       <hr>
 
       <footer>
-        <p>&copy; <a href="#">testTheRest</a> 2015 by <a href="#">@Vishal Joshi</a>. Version 0.2(Beta)</p>
-  
+        <p>&copy; <a href="#">testTheRest</a> 2015 by <a href="#">@Vishal Joshi</a>. Version 0.21.4(Beta)</p>
+
       </footer>
 
     </div><!--/.container-->
