https://github.com/vishaljoshi/TestTheRest/issues/2 fixed

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 <script src="core/eventBus.js" ></script>
 
   <script src="default-testCases.js"></script>
-
+  <script  src="core/jsonParser.js"></script>
+  <script  src="core/jsonAssertions.js"></script>
   <script src="core/testTheRest.js"></script>
   <script src="dashboard.js"></script>
 
-  <script  src="core/navi.js"></script>
+
 
 
 
