--- a/faq.html
+++ b/faq.html
@@ -82,26 +82,28 @@
           <div class="row">
           <h3>Examples</h3>
           <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-4">
               <h5>JSON data</h5>
-            <p style="border:1px solid rgb(48, 121, 237)"><code>{
-  "name": "tom",
-  "age": 25,
-  "married": false,
-  "height": 176.784,
-  "pets": [
-    {
-      "type": "dog",
-      "name": "beast"
-    },
-    {
-      "type": "giraffe",
-      "name": "tiny"
-    }
-  ]
-}</code></p>
+            <p style="border:1px solid rgb(48, 121, 237)"><code>
+              {"boy":{
+    "name": "tom",
+    "age": 25,
+    "married": false,
+    "height": 176.784,
+    "pets": [
+      {
+        "type": "dog",
+        "name": "beast"
+      },
+      {
+        "type": "giraffe",
+        "name": "tiny"
+      }
+    ]
+  }}
+            </code></p>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-4">
               <h5>Assertion</h5>
               <div class="row">
                 <input type="text" disabled value="boy">
@@ -132,6 +134,37 @@
                  <p><code>tiny</code></p>
               </div>
 
+            </div>
+            <div class="col-xs-4">
+              <h5>Assertion</h5>
+              <div class="row">
+                <input type="text" style="width: 250px;" disabled value="boy.country=null">
+                 <p><code>true</code></p>
+              </div>
+              <div class="row">
+                <input type="text"  style="width: 250px;" disabled value="isNumber(boy.age)">
+                 <p><code>true</code></p>
+              </div>
+              <div class="row">
+                <input type="text" style="width: 250px;" disabled value="isFloat(boy.height)">
+                 <p><code>true</code></p>
+              </div>
+              <div class="row">
+                <input type="text"  style="width: 250px;" disabled value='boy.name=>has("t")'>
+                 <p><code>true</code></p>
+              </div>
+              <div class="row">
+                <input type="text" style="width: 250px;" disabled value="arrayLength(boy.pets)=2">
+                 <p><code>2</code></p>
+              </div>
+              <div class="row">
+                <input type="text" style="width: 250px;" disabled value='boy.pets=>arrayHas("type","do")'>
+                 <p><code>true</code></p>
+              </div>
+              <div class="row">
+                <input type="text" style="width: 250px;" disabled value='boy.name=>regTest("m$")'>
+                 <p><code>true</code></p>
+              </div>
             </div>
           </div>
           </div>
