--- a/faq.html
+++ b/faq.html
@@ -169,6 +169,12 @@
           </div>
           </div>
           <div class="row">
+          <h3>Access the testcase?</h3>
+              <p>
+                You can access the whole testcase Object . This will help in  accessing previous tests and help in getting commmons values from the testcase object.
+              </p>
+          </div>
+          <div class="row">
           <h3>Playgound</h3>
           <p>
             <a href="http://embed.plnkr.co/WzyzgCufb8zmDWWjGh8E/preview" target="_blank">http://embed.plnkr.co/WzyzgCufb8zmDWWjGh8E/preview</a>
